<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Now Trending - World</string>
    <string name="hello_world">Now Trending</string>
    <string name="action_settings">Settings</string>
    <string name="glass_voice_prompt">show me trends</string>
    <string name="menu_world">World</string>
    <string name="menu_usa">USA</string>
    <string name="menu_uk">UK</string>
    <string name="menu_canada">Canada</string>
    <string name="menu_korea">South Korea</string>
    <string name="menu_india">India</string>
    <string name="menu_italy">Italy</string>
    <string name="menu_indonesia">Indonesia</string>
    <string name="menu_nigeria">Nigeria</string>
    <string name="menu_pakistan">Pakistan</string>
    <string name="menu_philippines">Philippines</string>
    <string name="menu_australia">Australia</string>
    <string name="menu_ireland">Ireland</string>
    <string name="menu_genovia">Genovia</string>
</resources>